header desktop links fix color contrast

--- a/style/_header.scss
+++ b/style/_header.scss
@@ -72,7 +72,8 @@
             
             a {
                 text-decoration: none;
-                color: $dark-grayish-violet;
+                // color: $dark-grayish-violet;
+                color: #5A565D;
                 font-weight: 700;
 
                 &:hover {
